fixing layout issues

--- a/src/components/MailCard/styles.css
+++ b/src/components/MailCard/styles.css
@@ -13,6 +13,18 @@
   font-size: 0.9rem;
 }
 
+@media (max-width: 450px) {
+  #mce-EMAIL {
+    background: #FDFDFD;
+    border: 1px solid #BBC6D1;
+    border-radius: 4px;
+    margin-bottom: 0.5rem;
+    padding: 0.5rem 1rem;
+    font-family: sans-serif;
+    font-size: 0.9rem;
+  }
+}
+
 .newsletter-title {
   margin-bottom: 0.5rem;
 }
@@ -34,4 +46,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+@media(max-width: 450px) {
+  .newsletter-container {
+    display: flex;
+    flex-direction: column;
+  }
 }
